--- a/exercise/ex1/1_notmnist.ipynb
+++ b/exercise/ex1/1_notmnist.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -127,16 +127,6 @@
     "    # prevent exp overflow\n",
     "    logits = logits / np.max(logits) * 10\n",
     "    return np.exp(logits) / np.reshape(np.sum(np.exp(logits),1), (np.shape(logits)[0],1))\n",
-    "# def LossFuction(X,W,b,Y):\n",
-    "#     m = X.shape[0]\n",
-    "#     Z = np.dot(X,W) + b\n",
-    "#     print(Z * (1 - Z))\n",
-    "#     p = softMax(Z)\n",
-    "#     L = -np.sum(Y * np.log(p)) / m\n",
-    "#     db = -np.sum(Y * (1 / p) * Z * (1 - Z), 0) / m \n",
-    "    \n",
-    "#     dW = -np.dot(X.T, Y * (1 / p) * Z * (1 - Z))\n",
-    "#     return L, dW, db\n",
     "def LossFuction(X,W,b,Y):\n",
     "    m = X.shape[0]\n",
     "    p = softMax(np.dot(X,W) + b)\n",
@@ -152,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -161,25 +151,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The he Loss is: 2.32636034744\n",
-      "Validate accuracy is: 12%\n",
-      "The he Loss is: 1.46208457766\n",
-      "Validate accuracy is: 69%\n",
-      "The he Loss is: 1.27128748233\n",
+      "The he Loss is: 2.33611444772\n",
+      "Validate accuracy is: 9%\n",
+      "The he Loss is: 1.48574822115\n",
+      "Validate accuracy is: 66%\n",
+      "The he Loss is: 1.17612849377\n",
+      "Validate accuracy is: 71%\n",
+      "The he Loss is: 1.0395270731\n",
       "Validate accuracy is: 72%\n",
-      "The he Loss is: 1.21198927601\n",
+      "The he Loss is: 0.973879916637\n",
       "Validate accuracy is: 73%\n",
-      "The he Loss is: 1.19206226837\n",
+      "The he Loss is: 0.949316017993\n",
       "Validate accuracy is: 74%\n",
-      "The he Loss is: 1.17958419433\n",
+      "The he Loss is: 0.93545425845\n",
       "Validate accuracy is: 75%\n",
-      "The he Loss is: 1.17114848056\n",
+      "The he Loss is: 0.925988621297\n",
       "Validate accuracy is: 75%\n",
-      "The he Loss is: 1.16430738538\n",
+      "The he Loss is: 0.919612448768\n",
       "Validate accuracy is: 75%\n",
-      "The he Loss is: 1.15802449636\n",
-      "Validate accuracy is: 75%\n",
-      "The he Loss is: 1.15356730314\n",
+      "The he Loss is: 0.916183384452\n",
       "Validate accuracy is: 75%\n",
       "Test accuracy is: 81%\n",
       "The letter is I, you predict I\n",
@@ -199,7 +189,7 @@
       "The letter is G, you predict G\n",
       "The letter is H, you predict H\n",
       "The letter is A, you predict A\n",
-      "The letter is B, you predict C\n",
+      "The letter is B, you predict E\n",
       "The letter is C, you predict C\n",
       "The letter is F, you predict F\n"
      ]
@@ -209,7 +199,7 @@
     "W = np.random.random((num_features,num_classes))\n",
     "b = np.random.random((1,num_classes))\n",
     "loop_count = 10000\n",
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "index = 0\n",
     "alpha = 0.01\n",
     "for i in range(loop_count):\n",
@@ -228,6 +218,15 @@
     "for id, iv in enumerate(predicts[:20]):\n",
     "    print(\"The letter is {}, you predict {}\".format(chr(65 + test_label[id]), chr(65 + iv)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
