--- a/exercise/ex1/ex1_notebook1.ipynb
+++ b/exercise/ex1/ex1_notebook1.ipynb
@@ -124,21 +124,29 @@
    "outputs": [],
    "source": [
     "def softMax(logits):\n",
-    "    p = np.zeros_like(logits)\n",
     "    # Todo \n",
     "    # Please caculate the soft max here\n",
-    "    return p\n",
+    "    # input logits, the predict score of each classes\n",
+    "    # output, the predict percentage of each classes\n",
     "def LossFuction(X,W,b,Y):\n",
-    "    L = 0\n",
-    "    db = np.zeros_like(b)\n",
-    "    dW = np.zeros_like(W)\n",
     "    # Todo \n",
     "    # Please caculate the Loss and gradient of W, b here\n",
-    "    return L, dW, db\n",
+    "    # output L, the total loss\n",
+    "    # output dW, gradient of W\n",
+    "    # output db, gradient of b\n",
     "def predict(X,W,b):\n",
-    "    return np.argmax(softMax(np.dot(X, W) + b), axis=1)\n",
-    "def accuracy(predict,y):\n",
-    "    return np.sum(np.array(predict == y, dtype=int)) * 100 / np.shape(y)[0] "
+    "    # Todo\n",
+    "    # predict letter index here\n",
+    "    # input X, input data\n",
+    "    # input W, current W\n",
+    "    # input b, current bias\n",
+    "    # output predict result, data_size X 1 matrix, each element indicates which letter the X belongs to\n",
+    "def accuracy(predicts,y):\n",
+    "    # Todo\n",
+    "    ## caculate the percentage of results that are correctly predected here\n",
+    "    # input predict result, data_size X 1 matrix, each element indicates which letter the X belongs to\n",
+    "    # input y, data label, the real char the data is\n",
+    "    # output the percentage of predict accuracy, should be in %\n"
    ]
   },
   {
@@ -211,8 +219,9 @@
     "    if i % (loop_count // 10) == 0:\n",
     "        print(\"The he Loss is:\",L)\n",
     "        print(\"Validate accuracy is: {}%\".format(accuracy(predict(valid_dataset,W,b),valid_label)))\n",
-    "    W = W - alpha * dW\n",
-    "    b = b - alpha * db\n",
+    "    # Todo\n",
+    "    # Please update W and b here\n",
+    "    \n",
     "print(\"Test accuracy is: {}%\".format(accuracy(predict(test_dataset,W,b),test_label)))\n",
     "predicts = predict(test_dataset,W,b)\n",
     "\n",
