change activion function from sigmoid to relu.

--- a/exercise/ex2/NeuralNetwork.ipynb
+++ b/exercise/ex2/NeuralNetwork.ipynb
@@ -144,7 +144,7 @@
     "#     Construct relu neural network\n",
     "    logits = tf.matmul(tf_train_dataset, weights) + biases\n",
     "    \n",
-    "    tf_layer_two_input = tf.nn.sigmoid(logits)\n",
+    "    tf_layer_two_input = tf.nn.relu(logits)\n",
     "    \n",
     "    logits_layer_two = tf.matmul(tf_layer_two_input, weights_two) + biases_two\n",
     "    \n",
