add color histgram feature

--- a/exercise/ex3/Featured_Logistic_Regression.ipynb
+++ b/exercise/ex3/Featured_Logistic_Regression.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -24,6 +24,7 @@
     "from six.moves import cPickle as pickle\n",
     "from scipy.ndimage import uniform_filter\n",
     "import tensorflow as tf\n",
+    "import matplotlib\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -77,21 +78,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "-0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.max(train_dataset)\n",
+    "print np.min(train_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10,)\n",
+      "(441,)\n",
+      "(10,)\n",
+      "(441,)\n",
+      "(10,)\n",
+      "(441,)\n"
+     ]
+    }
+   ],
    "source": [
     "def extract_features(imgs):\n",
     "  num_images = imgs.shape[0]\n",
     "  if num_images == 0:\n",
     "    return np.array([])\n",
-    "  feats = hog_feature(imgs[0].squeeze())\n",
-    "  imgs_features = np.zeros((num_images, feats.shape[0]))\n",
+    "  feats_ch = color_histogram_hsv(imgs[0].squeeze())\n",
+    "  print feats_ch.shape\n",
+    "  feats_hog = hog_feature(imgs[0].squeeze())\n",
+    "  print feats_hog.shape\n",
+    "  imgs_features = np.zeros((num_images, feats_hog.shape[0] + feats_ch.shape[0]))\n",
     "  for i in xrange(0, num_images):\n",
-    "    imgs_features[i,:] = hog_feature(imgs[i].squeeze())\n",
+    "    imgs_features[i,:feats_ch.shape[0]] = color_histogram_hsv(imgs[i].squeeze())\n",
+    "    imgs_features[i,feats_ch.shape[0]:] = hog_feature(imgs[i].squeeze())\n",
     "  return imgs_features\n",
+    "def color_histogram_hsv(im, nbin=10, xmin=-0.5, xmax=0.5, normalized=True):\n",
+    "  ndim = im.ndim\n",
+    "  bins = np.linspace(xmin, xmax, nbin + 1)\n",
+    "#   hsv = matplotlib.colors.rgb_to_hsv(im/xmax) * xmax\n",
+    "  imhist, bin_edges = np.histogram(im, bins=bins, density=normalized)\n",
+    "  imhist = imhist * np.diff(bin_edges)\n",
+    "  return imhist\n",
+    "\n",
     "def hog_feature(image):\n",
     "  \"\"\"Compute Histogram of Gradient (HOG) feature for an image\n",
     "  \n",
@@ -152,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -198,43 +245,43 @@
      "text": [
       "Initialized\n",
       "()\n",
-      "Loss at step 0: 2.489006\n",
+      "Loss at step 0: 2.466615\n",
       "16000\n",
       "(16000, 10)\n",
-      "Training accuracy: 9.1%\n",
+      "Training accuracy: 10.2%\n",
       "(1000, 10)\n",
-      "Validation accuracy: 11.5%\n",
+      "Validation accuracy: 15.9%\n",
       "\n",
-      "Loss at step 200: 0.802565\n",
+      "Loss at step 200: 0.781468\n",
       "16000\n",
       "(16000, 10)\n",
-      "Training accuracy: 78.9%\n",
+      "Training accuracy: 79.2%\n",
       "(1000, 10)\n",
-      "Validation accuracy: 80.2%\n",
+      "Validation accuracy: 79.0%\n",
       "\n",
-      "Loss at step 400: 0.693159\n",
+      "Loss at step 400: 0.678782\n",
       "16000\n",
       "(16000, 10)\n",
       "Training accuracy: 81.5%\n",
       "(1000, 10)\n",
-      "Validation accuracy: 82.2%\n",
+      "Validation accuracy: 81.2%\n",
       "\n",
-      "Loss at step 600: 0.645074\n",
+      "Loss at step 600: 0.632869\n",
       "16000\n",
       "(16000, 10)\n",
-      "Training accuracy: 82.4%\n",
+      "Training accuracy: 82.8%\n",
       "(1000, 10)\n",
-      "Validation accuracy: 83.7%\n",
+      "Validation accuracy: 82.1%\n",
       "\n",
-      "Loss at step 800: 0.615777\n",
+      "Loss at step 800: 0.604538\n",
       "16000\n",
       "(16000, 10)\n",
-      "Training accuracy: 83.2%\n",
+      "Training accuracy: 83.6%\n",
       "(1000, 10)\n",
-      "Validation accuracy: 84.2%\n",
+      "Validation accuracy: 83.0%\n",
       "\n",
       "(1000, 10)\n",
-      "Test accuracy: 89.0%\n"
+      "Test accuracy: 88.9%\n"
      ]
     }
    ],
